feat(thesis): daily update

--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -3,7 +3,17 @@
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\section{További eszközök integrálása}
+\section{Üzemeltetési tapasztalatok}
+%----------------------------------------------------------------------------
+
+
+%----------------------------------------------------------------------------
+\section{Továbbfejlesztési lehetőségek}
+%----------------------------------------------------------------------------
+
+
+%----------------------------------------------------------------------------
+\subsection{További eszközök integrálása}
 %----------------------------------------------------------------------------
 
 A Dante networking keresztrendszer lehetővé teszi a rendszer folyamatos bővítését a
@@ -56,7 +66,7 @@ jár, így a bővítés előtt alaposan mérlegelni kell, hogy valóban szüksé
 
 
 %----------------------------------------------------------------------------
-\section{Bővítés nagyobb interfészre}
+\subsection{Bővítés nagyobb interfészre}
 %----------------------------------------------------------------------------
 
 Tegyük fel, hogy egy szimfonikus zenekar koncertjét szeretnénk hangosítani, ahol a zenekar
