feat(thesis): daily update

--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -6,6 +6,15 @@
 \section{Üzemeltetési tapasztalatok}
 %----------------------------------------------------------------------------
 
+A megvalósított rendszer üzemeltetése a tervezett módon történt. A rendszer
+tökéletesen megfelelt a kitett elvárásoknak, és üzemeltetése során nem
+tapasztaltunk semmilyen rendellenességet. A teljesítménye és megbízhatósága is megfelelőnek bizonyult, nem 
+voltak csomagvesztéstek a hálózaton, egyetlen egyszer sem kellett a másodlagos redundáns hálózatra
+váltani, nem fordultak elő kiugró késések, minden eszköz bőven a beállított buffer méretben belül maradt.
+Minden komponens megfelelően végezte a rá bízott feladatot, és a rendszer
+stabilan kihagyás nélkül működött a teljes üzemidő alatt. 
+
+
 
 %----------------------------------------------------------------------------
 \section{Továbbfejlesztési lehetőségek}
